fixed bottom align in description

--- a/src/Components/CharacterInfo/DescriptionPage/DescriptionPage.module.css
+++ b/src/Components/CharacterInfo/DescriptionPage/DescriptionPage.module.css
@@ -5,7 +5,7 @@
   font-weight: 500;
   padding: 10px;
   position: absolute;
-  bottom: 160px;
+  bottom: 195px;
   overflow-y: auto;
   max-height: 50vh;
   width: 100%;
